Test some Oidc methods